Fixed missaligned input forms in translations.

--- a/app/react/App/scss/elements/_panel.scss
+++ b/app/react/App/scss/elements/_panel.scss
@@ -52,6 +52,9 @@
     }
     .form-control {
       margin-bottom: 15px;
+      &.no-margin-bottom {
+        margin-bottom: 0px;
+      }
     }
 }
 
